@@ -1,3 +1,12 @@
+2008-07-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclDictObj.c (SetDictFromAny): Make the list->dict
+	transformation a bit more efficient; modern dicts are ordered and so
+	we can round-trip through lists without needing the string rep at all.
+	* generic/tclListObj.c (SetListFromAny): Make the dict->list
+	transformation not lossy of internal representations and hence more
+	efficient. [Bug 2008248] (ajpasadyn) but using a more efficient patch.
+
 2008-07-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/DictObj.3: Fix error in example. [Bug 2016740]
